--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -873,3 +873,19 @@ volume = {92},
 year = {2015}
 }
 
+@article{Cao1991,
+author = {Cao, Wenwu and Cross, L. E.},
+doi = {10.1103/PhysRevB.44.5},
+file = {:home/ponet/Documents/Mendeley Desktop/PhysRevB.44.5.pdf:pdf},
+issn = {0163-1829},
+journal = {Phys. Rev. B},
+mendeley-groups = {PhD Thesis/Softening},
+month = {jul},
+number = {1},
+pages = {5--12},
+title = {{Theory of tetragonal twin structures in ferroelectric perovskites with a first-order phase transition}},
+url = {https://link.aps.org/doi/10.1103/PhysRevB.44.5},
+volume = {44},
+year = {1991}
+}
+
