much work on softening

--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -889,3 +889,10 @@ volume = {44},
 year = {1991}
 }
 
+@book{Biner,
+author = {Biner, S Bulent},
+file = {:home/ponet/Downloads/Programming Phase-Field Modeling by S. Bulent Biner (auth.) (z-lib.org).pdf:pdf},
+isbn = {9783319411941},
+title = {{Programming Phase-Field Modeling}}
+}
+
