--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -57,7 +57,7 @@ A similar explanation can not be used for the DWs, though, since they are marked
 
 \section{Theory}
 Since the mechanical DW softening seems a general property of 180$^\circ$ ferroelectric DWs, we focus on BaTiO$_3$ (BTO) in the following.
-Due to the relatively large size of geometry that needs to be simulated, we adopt the continuum Ginzburg-Landau-Devonshire model as described in \cite{Marton2010}.  
+Due to the relatively large size of the strain texture associated with domain walls, and the tip that is pressed into the material, we adopt the continuum Ginzburg-Landau-Devonshire model as described in \cite{Marton2010}.  
 The free energy density written in terms of primary order parameter $P$ and associated strain $\varepsilon$ can be written as:
 \begin{eqnarray}\label{eq:BTO_energy}
 &&f = f_{L}+f_{G}+f_{c}+f_{q}+f_{fl},\\
@@ -145,11 +145,57 @@ When the center of the tip is close enough to the wall, the upper part of it wil
 The lower portion of the wall will remain at the center of its original Peierls Nabarro potential, since it experiences less effect of the tip.
 It is therefore impossible to solve analytically the realistic situation, and we proceed with simulations to make semi-quantitative statements on the behavior.
 
-The parameters we used are taken from previous ab-initio results \cite{Marton2010}, and the tip-applied force field is modeled by a bell-shaped function $a exp(-x^2/d^2)$ with $d \approx 20$nm representing the diameter of the contact area and $a = 10^{-7} J/m^3$. The softening is estimated as the ratio of deformation between the domain and the wall.
-As seen in Fig.~\ref{fig:BTO_theory}(a), and predicted by the above statements, the wall is softest not in the center, but rather at the point where $u'$ or $\varepsilon_{xz}$ is highest.
+\section{Methods}
+The Finite Elements method (FEM) provides a natural framework to solve continuum problems, sometimes also referred to as phase-field problems, that involve gradients such as strain (gradient of the displacement $u$) and the gradient of polarization \cite{Biner}.
 
+Similar to the well-known finite-difference methods, FEM is a local method, dividing the problem into separate domains (the elements) for which the contribution to the total energy can be calculated locally.
+A fundamental building block of this method is the isoparametric representation.
+In this representation, the geometry is divided into a set of elements that obey certain connectivity requirements, e.g. in Fig.~\ref{fig:BTO_fem}(a) a 2D geometry is divided into triangular elements.
+The values of the the displacement field $\mathbf{u}(\mathbf{x})$ and ferroelectric polarization $\mathbf{P}(\mathbf{x})$ are defined on the nodal points that link the different elements shown by the black dots of Fig.~\ref{fig:BTO_fem}(b).    
+\begin{figure}
+	\begin{subfigure}{0.49\textwidth}
+		\IncludeGraphics{fem_grid.png}
+		\caption{2D grid with triangular elements, \cite{Biner}}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\IncludeGraphics{fem_element.png}
+		\caption{Triangular element, \lp{wikipedia}}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\IncludeGraphics{fem_cubegrid.png}
+		\caption{Geometry used in simulations}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\IncludeGraphics{fem_tetrahedron.png}
+		\caption{Zoom on one element}
+	\end{subfigure}
+	\caption{\label{fig:BTO_fem} Example of the morfology of a 2D finite element grid.}
+\end{figure}
+Inside each element a local coordinate system with axes $\eta$ and $\zeta$ can then be defined as shown by the red arrows in Fig.~\ref{fig:BTO_fem}(b).
+Together with the shape functions that are defined on each local element \lp{Should I give some more info on what they are}, this allows for the values of the fields to be interpolated at all points inside the elements from their values at the nodes.
+Since the element represents a given volume of the total geometry, the contribution of each element to the total integral can thus be evaluated.
+A big bonus of this framework is that gradients of the fields can be evaluated purely locally, inside each element, through the use of this interpolation method.
+It also allows for a great flexibility through the density of the chosen grid and the order of interpolating functions used, although we do not exploit these.
 
+In our case, we use a rectangular geometry uniformly spanned by tetrahedron elements, as shown in Fig.~\ref{fig:BTO_fem}(c-d).
+The uniform mesh is largely motivated by implementation complexity, since we use a mostly in-house developed code based on the FEM building blocks supplied by the JuAFEM.jl package \lp{cite + link?}.
+It is obvious that the computational cost could be lowered by using a finer meshing close to the domain wall, where the fields vary the most, and a more course one in the domains.
+One has to, however, consider that when the tip is applied a finer mesh is also required around it, leading to different meshes for different locations of applied tip, greatly increasing the post-processing complexity.
+
+The last bulding block for the simulation is a way to optimize the fields in order to reach the equilibrium condition, both with and without applied tip.
+To do this we use a Conjugate Gradient method to minimize the total energy in terms of all the degrees of freedom (DOFs), i.e. the values of the fields at each of the nodes on the mesh.
+This requires us to define the partial derivatives of the total energy in terms of all the DOFs, for which we use a forward automatic differentiation scheme as implemented in ForwardDiff.jl, again for its remarkable simplicity and speed (as an idea, on a 64 core Epyc cluster, the $\approx$ 4 million partial derivatives are computed in a couple of seconds).
+
+Using the parameters from previous ab-initio results \cite{Marton2010}, we first optimized the equilibrium situation for both a uniform domain and a single domain wall.
+A bell shaped force field, modeled by function $a e^{-x^2/d^2}$ with $d \approx 20$nm representing the diameter of the contact area and $a = 10^{-7} J/m^3$, was then applied at various positions throughout both geometries.
+The uniform domain simulation is used as a measure of the finite-size effects that are inherently present in our simulations due to the long rangedness of strain and non-infinite geometry.
+This causes the indentation at the center of the geometry for a single domain to be less than the one when the tip is applied off-center.
+Since this is unphysical, we compensate for this by adding the differences to the results in the geometry with a wall present \lp{better explanation?}.
 
 \section{Results}
+Multiple geometries and element sizes were tested in order to verify that the results were not too much influenced by these numerical parameters which. 
+The softening is estimated as the ratio of the surface deformation between the domain and the wall.
+
+As seen in Fig.~\ref{fig:BTO_theory}(a), and predicted by the above statements, the wall is softest not in the center, but rather at the point where $u'$ or $\varepsilon_{xz}$ is highest.
 
 \printbibliography
