--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -18,6 +18,7 @@
 \addbibresource{./GdMn2O5/bib.bib}
 \addbibresource{./Rashba/bib.bib}
 \addbibresource{./Softening/bib.bib}
+\addbibresource{./Cr/bib.bib}
 
 %to be used in main text
 \newcommand{\ket}[1]{$\left|#1\right\rangle$}
@@ -66,9 +67,9 @@
 % % \Include{Theory}
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 % \Include{Rashba}
-% \Include{Cr}
+\Include{Cr}
 % \Include{GdMn2O5}
-\Include{Softening}
+% \Include{Softening}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
