--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -40,25 +40,50 @@ It is also known that the electronic excitations caused by the X-rays that were 
 For our modeling the X-ray pulses thus effectively inject heat into the SDW, which then thermalizes with the lattice (a phonon bath) on a longer timescale of the order of 400 ps.
 This naturally leads to a two temperature model to describe the perturbation caused by the pulses, with $T_L$ the temperature for the SDW and $T_b$ the temperature for the phonon bath:
 \begin{align}
-	c_L \dot{T}_L &= -k(T_L - T_b) + q(t) \\
-	c_b \dot{T}_b &= -k(T_b - T_L).
+	\label{eq:Cr_twotemp}
+	c_L \dot{T}_L &= -k(T_L - T_b) + q \\
+	c_b \dot{T}_b &= -k(T_b - T_L).\nonumber
 \end{align}
-$c_L, c_b$ are the heat capacities of the SDW and the bath, $k$ the heat transfer rate, and $q(t)$ signifies the heat injected into the system through the photon pulses, and is modeled by a time dependent gaussian $q(t) = \frac{f}{\tau \sqrt{\pi}} e^{-(t-t_0)^2/2\tau^2}$, where $\tau$ denotes the pulse width. The dots signify time derivatives.
+$c_L, c_b$ are the heat capacities of the SDW and the bath, $k$ the heat transfer rate, and $q$ signifies the heat injected into the system through the photon pulses, and is modeled by a time dependent gaussian $q(t) = \frac{f}{\tau \sqrt{2\pi}} e^{-\frac{1}{2}\left(\frac{t-t_0}{\tau}\right)^2}$, where $\tau$ denotes the pulse width and $f$ the fluence.
+The dots signify time derivatives.
 
-The time evolution of the system can be described using the Euler-Lagrange equations with an energy dissipation term for $y$ that denotes the damping.
-\begin{align}
+The time evolution of the system can be described using the Langrangian:
+\begin{equation}
     \mathcal{L}(L, y, \dot{L}, \dot{y}, t) = \frac{m_L \dot{L}(t)^2}{2} + \frac{m_y \dot{y}(t)^2}{2} - F(L, y, t),
-\end{align}
-where the $\gamma$ denote the damping parameters for both order parameters. This then leads to the well-known Euler-Lagrange equations given by
+\end{equation}
+with associated Euler-Lagrange equations:
 \begin{align}
-    m_L \Ddot{L} &= -\alpha(T-T_c)L - \beta L^3 + 2g L y - \gamma_L \dot{L} \label{eq:L_diffeq}\\
-    m_y \Ddot{y} &=gL^2 -\omega_0^2 y  - b y^3 - \gamma_y \dot{y} 
+    \frac{\partial \mathcal{L}}{\partial L} - \frac{d}{dt}\frac{\partial \mathcal{L}}{\partial \dot{L}} &= \gamma_y \dot{L}\\
+    \frac{\partial \mathcal{L}}{\partial y} - \frac{d}{dt}\frac{\partial \mathcal{L}}{\partial \dot{y}} &= \gamma_L \dot{y}\nonumber
 \end{align}
-which we then solve numerically to get the time evolution of both order parameters.
+where the $\gamma$ denote the damping parameters for both order parameters.
+Substituting Eq.~\ref{eq:Cr_landau} leads to 
+\begin{align}
+	\label{eq:Cr_euler_lagrange}
+	    m_L \Ddot{L} &= -\alpha(T_L-T_c)L - \beta L^3 - \gamma_L \dot{L} + 2g L y \\
+	    m_y \Ddot{y} &= -\omega_0^2 y  - b y^3 - \gamma_y \dot{y} + gL^2.\nonumber
+\end{align}
+These equations, together with Eqs.~\ref{eq:Cr_twotemp} describing the temperature evolution of the SDW ($T_L$) under influence of the optical pulses, fully describe the dynamics that are experimentally observed.
+One obvious remark can be made here, in that to be completely exact, the energy dissipated through the damping terms in Eq.~\ref{eq:Cr_euler_lagrange} should be absorbed into the bath and thus influence $T_b$. However, the case can be made that since these are only single modes, their contribution to the heating of the bath will be negligible compared with that coming from the thermalization of all the electronic degrees of freedom.
+
+\section{Methods}
+To solve the time evolution of $L$ and $y$ throught the differential equations in Eqs.~\ref{eq:Cr_euler_lagrange} we used the numerical integration methods implemented in the DifferentialEquations.jl package. More specifically the \lp{I think Tsit5} algorithm was used. Originally the dynamics were fully solved both for $L$ and $y$, but it was found during the fitting process that the dynamics of $L$ are significantly faster than those of $y$, i.e. both the ``mass'' of the SDW order is orders of magnitude smaller than that for $y$ parameter, and the parameters describing the Landau free energy potential are orders of magnitude larger. This all leads to the SDW almost perfectly tracking its instantaneous minimum on the timescales that are of interest.
+Solving dynamics with significantly different timescales is in general hard from the numerical point of view, and while there are other ways around this, we opted to take $m_L = 0$ and use the instantaneous minimum in the equation describing the dynamics of $y$.
+This minimum is found by minimizing the Landau free energy in Eq.~\ref{eq:Cr_landau} for a given $y$ and $T_L$ in terms of $L$ such that $\frac{\partial F}{\partial L} = 0$, leading to:
+\begin{equation}
+	L(t) = \pm \sqrt{\frac{- \alpha (T_L - T_c) + 2 g y}{\beta}}.
+\end{equation}
+
+The starting temperature of the bath was fixed at 115 K, and $T_c$ was observed to be at 290 K, consistent with previous observations that in general the N\'eel temperature of a thin film is lower than that of the bulk material (bulk Cr has a N\'eel temperature of $\approx$ 310 K).
+Most parameters of the model described above were not known a priori and thus had to be fitted to the experimental measurements. To aid with the fitting, judicious starting values could be chosen for some parameters. For example, it was known that the pulse width $\tau$ was under 100 fs, the oscillation frequency of the PLD $\omega_0 \approx$ 14 or equivalently a period of around 450 fs. It was also known that in general the second pulse had a fluency of around 80\% that of the first, and we also chose the initial heat capacities for the bath and electronic degrees of freedom to have a ratio $\frac{c_b}{c_L}$ close to 7, which was known from previous experiments \lp{citation}.
+
+For each set of trial parameters, the time evolution of the system was solved on an interval of -2 ps to 8 ps, where the lower bound is chosen so that the numerical integration starts from a completely equilibrium initial condition. This is needed because when the sharp pulse arrives around 0 ps, some energy already enters the system slightly before 0 ps due to the gaussian shape.
+The error of the solution $\tilde{x}$ w.r.t. the experimental measurements $x$ is then the mean square sum $err = \sum_{i=1}^n \frac{(x_i - \tilde{x}_i)^2}{n}$, where $i$ denote the measurement points.
+The numerical optimization was done through the Optim package, where it was found that the Nelder Mead simplex algorithm \lp{citation needed} works best for this very non-linear problem.
 
 \section{Results}
 The experimental results we use as a basis to fit our model to are shown in Fig.~\ref{fig:Cr_experimental}. In the numerical model, we found in earlier trials that the dynamics of the SDW order parameter $L$ is orders of magnitude faster than the ones from the PLD $y$, as expected. This can also be seen from Fig.~\ref{fig:Cr_energy_surfaces} since the energy potential is a lot flatter for $y$ than for $L$, leading to a slower time evolution. This difference in dynamics makes it extremely hard to solve the differential equations numerically, we therefore assumed that at each timestep the $L$ order parameter is in equilibrium in its instantaneous energy potential. This is equivalent to the limit of the mass $m_L$ in Eq.~\ref{eq:L_diffeq} going to zero.
-The value of $L$ at a given $T_L$ and $y$ can be found by minimizing the Landau free energy \ref{eq:Cr_landau} in terms of $L$ such that $\frac{\partial F}{\partial L} = 0$, leading to:
+The value of $L$ at a given $T_L$ and $y$ can be found by minimizing the Landau free energy \ref{eq:Cr_landau} 
 \begin{equation}
 	\label{eq:Cr_L0}
 	L_0 = \pm \sqrt{\frac{\alpha (T_L - T_c) + 2 g y}{\beta}}.
