--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -1,6 +1,5 @@
 \chapter{Introduction}
-Theoretical condensed matter research is plagued by a fundamental issue of complexity. The shear amount of degrees of freedom in a material of any technologically relevant scale is overwhelming (i.e. $\sim10^{23}$ electrons per cm$^3$), and make it impossible to describe the quantum mechanical wavefunction exactly \lp{there is some more nice things along this line in Wen}. This forces researchers in the field to make approximations, as to make the problem tractable, while still capturing the essential physics resulting in the effects under investigation.
-
+Theoretical condensed matter research is plagued by a fundamental issue of complexity. The sheer amount of degrees of freedom in a material of any technologically relevant scale is overwhelming (i.e. $\sim10^{23}$ electrons per cm$^3$), and make it impossible to describe the quantum mechanical wavefunction exactly \lp{there is some more nice things along this line in Wen}. This forces researchers in the field to make approximations, as to make the problem tractable, while still capturing the essential physics resulting in the effects under investigation.
 The way to make progress with this undertaking has always been to try and isolate the parts of the system that contribute the most. As is well known, every quantum mechanical system is governed fundamentally by its Hamiltonian. One could go so far as to say that if we would be able to exactly calculate all of its eigenvectors and eigenvalues, the field of consed matter would be completed. This is ofcourse impossible for reasons stated above.
 
 The full Hamiltonian can be decomposed into several contributions, which allows one to focus on the most important contributions, while discarding the rest. For example, the elastic energy scales needed to completely break a material, while important for mechanical studies, are so much larger than those governing the movement of electrons through the material, that they can be discarded if we are only interested in the latter.
