--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -60,6 +60,29 @@
 \begin{document}
 
 \chapter*{Abstract}
+Theoretical condensed matter research is plagued by a fundamental issue of complexity. The sheer amount of degrees of freedom in a material on any technologically relevant scale is overwhelming (e.g. $\sim10^{23}$ electrons per cm$^3$), and makes it impossible to describe the quantum mechanical wavefunction exactly.
+
+The Hamiltonian plays a central role in the description of crystals, the subject of this thesis. It can be decomposed into various parts, and their interactions. Depending on the physics under scrutiny it then often suffices to solve only one of those parts.
+This can be either because the energy scales and associated timescales that govern the constituents are very different, or because the interactions between them are small.
+One example, often put into practice, is the separation of electronic and phononic (lattice) degrees of freedom, leading to the well-known Born-Oppenheimer approximation, decoupling their respective motion.
+Another is the often neglected spin-orbit coupling, due to the tiny prefactor associated with its relativistic origin.
+
+Solving these subproblems then allows for progress to be made in understanding the physics that govern them.
+However, there will inevitably be systems for which this interaction is not small and leads to physics that manifestly depends on both subsystems combined.
+In this thesis we focus on these cases and how they arise in functional materials, with the occasional eye towards applications in technology.
+
+The reason why these cross-order couplings can be interesting for technological applications, is that often one of the orders is more robust with respect to perturbations, and therefore more long-lived, but also harder to control efficiently.
+By exploiting the cross-order coupling in certain materials, one could theoretically control the long lived order by applying perturbations to the more easily controllable order.
+
+In giant Rashba effect systems, the coupling between spin and ferroelectric order leads to a linear spin-splitting of the band structure, whose sign depends on the orientation of the ferroelectric polarization.
+We show that, rather than the relativistic Rashba effect, a combination of electrostatics and atomic spin-orbit coupling lies at the origin of the large splitting. 
+The coupling between magnetism and ferroelectricity in multiferroic GdMn$_2$O$_5$ leads to a peculiar four-state hysteresis loop for the ferroelectric polarization, which depends on the magnitude, angle and history of the applied magnetic field.
+As we will show, this four-state hysteresis loop is accompanied by a full 360$^\circ$ rotation of spins in the material, which resembles the crankshaft of a car, converting the linear back-and-forth motion of the magnetic field into a rotational motion of the spins.
+In a thin film of elemental Chromium, the ultrafast dynamics of a spin density wave, coupled to a slower varying charge density wave, allows for a high degree of control of the latter through excitations of the former.
+This allows us to predict the sequence of optical pulses to be applied to the material in order to follow closely an enveloping signal function. 
+And finally, the coupling between ferroelectricity and strain in BaTiO$_3$ leads to a softening at purely ferroelectric domain walls, allowing for some mechanical control of the position of this wall.
+
+We utilize both theoretical and computational tools to understand the nature of these interactions, how they lead to cross-order coupling in these materials, and how this then translates into the experimentally observed behavior.
 \chapter*{Acknowledgements}
 \tableofcontents
 
