--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -35,6 +35,7 @@ where $L$, $y$ and $T_L$ are the time dependent variables.
 The double well potential that leads to the SDW is characterised by $\alpha$ and $\beta$, with the temperature of the SDW given by $T_L$, with the critical temperature $T_c$ below which the phase transition occurs and the SDW order sets in. The coupling between the two order parameters is given by term with $\gamma$. Only even orders of $L$ appear in the energy, since the energy is time reversal even, but $L$ is time reversal odd. The PLD order parameter $y$ has a zero equilibrium value without any interaction with $L$, since it is not the primary order parameter. The fourth order term $\frac{b}{4}y^4$ is only included to provide a better fit to some of the anistropic features of observed by the experiment, not to bound the energy potential in terms of $y$, as would be required if $y$ was the primary order parameter with a negative second order term.
 It is the interaction with the primary order parameter $L$ that provides the ``force'' to move $y$ up in its own potential, leading to the nonzero equilibrium value. This concept is the key to understanding the observed physics.
 
+Through careful analysis of the electronic band structure through high-resolution ARPES experiments, it was found that the dynamics of the SDW and more
 Since SDWs in Chromium originate purely from electronic correlations, it is fair to equate the temperature of the SDW order parameter with the electronic temperature.
 It is also known that the electronic excitations caused by the X-rays that were used in the experiments thermalize on a very short timescale, allowing us to treat them thermodynamically and assign a temperature~\cite{Nicholson2016}.
 For our modeling the X-ray pulses thus effectively inject heat into the SDW, which then thermalizes with the lattice (a phonon bath) on a longer timescale of the order of 400 ps.
