--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -49,13 +49,13 @@
 
 % \usetikzlibrary{shapes,arrows,decorations.pathmorphing}
 
-\title{
-	{Interplay between complex orders in functional materials}\\
-	{\large Department of Nanosciences, Scuola Normale Superiore di Pisa}\\
-	{\large Quantum Materials Theory, Istituto Italiano di Tecnologia}}
+% \title{
+	% {Interplay between complex orders in functional materials}\\
+	% {\large Department of Nanosciences, Scuola Normale Superiore di Pisa}\\
+	% {\large Quantum Materials Theory, Istituto Italiano di Tecnologia}}
 
-\author{Louis Ponet}
-\date{today}
+% \author{Louis Ponet}
+% \date{today}
 
 \begin{document}
 
@@ -68,29 +68,32 @@ One example, often put into practice, is the separation of electronic and phonon
 Another is the often neglected spin-orbit coupling, due to the tiny prefactor associated with its relativistic origin.
 
 Solving these subproblems then allows for progress to be made in understanding the physics that govern them.
-However, there will inevitably be systems for which this interaction is not small and leads to physics that manifestly depends on both subsystems combined.
+However, there will inevitably be systems for which this interaction is not small and leads to fascinating new physics that manifestly depends on both subsystems combined.
 In this thesis we focus on these cases and how they arise in functional materials, with the occasional eye towards applications in technology.
 
 The reason why these cross-order couplings can be interesting for technological applications, is that often one of the orders is more robust with respect to perturbations, and therefore more long-lived, but also harder to control efficiently.
-By exploiting the cross-order coupling in certain materials, one could theoretically control the long lived order by applying perturbations to the more easily controllable order.
+By exploiting the cross-order coupling in certain materials, one could potentially control the long lived order by applying perturbations to the more easily controllable order.
 
 In giant Rashba effect systems, the coupling between spin and ferroelectric order leads to a linear spin-splitting of the band structure, whose sign depends on the orientation of the ferroelectric polarization.
-We show that, rather than the relativistic Rashba effect, a combination of electrostatics and atomic spin-orbit coupling lies at the origin of the large splitting. 
-The coupling between magnetism and ferroelectricity in multiferroic GdMn$_2$O$_5$ leads to a peculiar four-state hysteresis loop for the ferroelectric polarization, which depends on the magnitude, angle and history of the applied magnetic field.
+We show that, rather than the relativistic Rashba effect, a combination of electrostatics and atomic spin-orbit coupling lies at the origin of the large splitting.
+
+The coupling between magnetism and ferroelectricity in multiferroic GdMn$_2$O$_5$ leads to a never before observed four-state hysteresis loop for the ferroelectric polarization, which depends on the magnitude, angle and history of the applied magnetic field.
 As we will show, this four-state hysteresis loop is accompanied by a full 360$^\circ$ rotation of spins in the material, which resembles the crankshaft of a car, converting the linear back-and-forth motion of the magnetic field into a rotational motion of the spins.
+
 In a thin film of elemental Chromium, the ultrafast dynamics of a spin density wave, coupled to a slower varying charge density wave, allows for a high degree of control of the latter through excitations of the former.
-This allows us to predict the sequence of optical pulses to be applied to the material in order to follow closely an enveloping signal function. 
+This allows us to predict the sequence of optical pulses to be applied to the material in order to follow closely an enveloping signal function.
+
 And finally, the coupling between ferroelectricity and strain in BaTiO$_3$ leads to a softening at purely ferroelectric domain walls, allowing for some mechanical control of the position of this wall.
 
 We utilize both theoretical and computational tools to understand the nature of these interactions, how they lead to cross-order coupling in these materials, and how this then translates into the experimentally observed behavior.
-\chapter*{Acknowledgements}
-\tableofcontents
+% \chapter*{Acknowledgements}
+% \tableofcontents
 
 % \Include{Introduction}
 % % \Include{Theory}
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 % \Include{Rashba}
-\Include{Cr}
+% \Include{Cr}
 % \Include{GdMn2O5}
 % \Include{Softening}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
